--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1297,7 +1297,7 @@ textarea {
 /*  5. Choose CSS
 /*----------------------------------------*/
 .choose-area{
-    background: url(../img/choose/choose-bd.jpg);
+    background: url(../img/banner/principlebanner.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -1834,7 +1834,7 @@ textarea {
 /*  8. Testimonial CSS
 /*----------------------------------------*/
 .testimonial-area{
-    background: url(../img/testimonial/testimonial-bg.jpg);
+    background: url(../img/banner/testimonial.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
