--- a/public/css/meanmenu.css
+++ b/public/css/meanmenu.css
@@ -39,7 +39,7 @@ a.meanmenu-reveal {
 }
 .mean-container a.meanmenu-reveal span {
 	display: block;
-	background: #fff;
+	background: #2c2b5e;
 	height: 3px;
 	margin-top: 3px;
 }
