--- a/public/assets/css/cassie.css
+++ b/public/assets/css/cassie.css
@@ -212,7 +212,8 @@ textarea {
   margin: 0;
   font-family: inherit;
   font-size: inherit;
-  line-height: inherit; }
+  line-height: inherit;
+}
 
 button,
 input {
@@ -257,6 +258,8 @@ input[type="month"] {
 
 textarea {
   overflow: auto;
+    width:100%;
+    height: 150px;
   resize: vertical; }
 
 fieldset {
@@ -2393,7 +2396,7 @@ input[type="button"].btn-block {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center; }
-  
+
   .btn-group-vertical > .btn,
   .ui-datepicker-buttonpane .btn-group-vertical > button,
   .sp-container .btn-group-vertical > button,
